fix channel description overflow

--- a/sass/includes/channel-page.sass
+++ b/sass/includes/channel-page.sass
@@ -64,6 +64,7 @@
 
   .description
     margin-top: 16px
+    overflow-wrap: break-word
 
 .channel-video
   @include channel-video
